--- a/css/top.css
+++ b/css/top.css
@@ -201,9 +201,10 @@
 .back-title{height:42px;line-height:42px;background: #41485b;padding:0 10px;}
 .back-title span{display:block;overflow:hidden;width:100%;white-space:nowrap;text-overflow:ellipsis;font-size:12px;color:#f6f6f6;}
 .back-date{height:16px;line-height:16px;padding:0 6px;position:absolute;left:5px;bottom:52px;background: rgba(0,0,0,0.8);border-radius:2px;color:#fff;}
-.back-arrow{width:20px;height:10px;background: url("../img/back-arrow.png") no-repeat;position:absolute;bottom:42px;right:5px;}
+.back-arrow{width:20px;height:10px;background: url("../img/back-arrow.png") no-repeat;position:absolute;bottom:40px;right:5px;}
 .back-yellow{width:100%;height:4px;background: #fff045;position:absolute;bottom:0;left:0;display:none;}
 .back-dels li.active .back-yellow{display:block;}
+
 /*赛事回顾end*/
 /*取消报名start*/
 .indexMain-wrap.reg-c .con-select-top,.indexMain-wrap.reg-b .con-select-top{margin-top:15px;}
@@ -212,6 +213,7 @@
 .indexMain-wrap.reg-c .club-t-items-txt,.indexMain-wrap.reg-b .club-t-items-txt{padding-left:10px;position:relative;}
 .indexMain-wrap.reg-c .club-t-submit{margin-top:30px;}
 .indexMain-wrap.reg-c .club-error{left:82px;}
+video{vertical-align: top;}
 /*取消报名end*/
 /*参赛报名start*/
 .indexMain-wrap.reg-b .club-t-dels{width:509px;height:973px;position:absolute;top:40px;margin-left:-254px;margin-top:0;}
