--- a/css/index.css
+++ b/css/index.css
@@ -38,13 +38,13 @@
 
 
 /*视频*/
-.video-box{height: 268px; color: #fff; position: relative; margin-top: 32px;}
+.video-box{/*height: 268px; */color: #fff; position: relative; margin-top: 32px;}
 .video-item{display: block; width: 100%; height: 100%;}
 .video-sec{ width: 100%; background: #000; position: absolute; left: 0px; bottom: 0px;}
 .video-text{height: 42px; display: block; overflow: hidden;padding-left: 20px;}
 .video-text,.video-text:hover{ color: #fff;}
 .video-text .video-icon{ float: left;width: 15px; height: 16px;background: url("../img/icon3.png") no-repeat; margin: 11px 8px 0 1px;}
-.video-text p{ float: left; line-height: 42px; height: 42px; width: 306px; overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
+.video-text p{ float: left; line-height: 42px; height: 42px; width: 284px; overflow: hidden;text-overflow: ellipsis;white-space: nowrap;}
 .video-gn{padding: 0 0 10px 20px;margin-top: -2px; display: none;}
 .video-play{ float: left;cursor: pointer}
 .video-play i{ float: left; width: 10px; height: 12px; background-repeat: no-repeat; margin: 9px 4px;}
@@ -262,7 +262,7 @@
 	.con-result-list .paiming-table{margin-bottom: 10px;}
 	.con-action-dels{padding-left: 10px; padding-right: 10px;}
 	.first-box{margin-bottom: 40px;}
-	.first-box .video-box,.first-box .con-schedule{width: 76%;margin-left: auto;margin-right: auto;}
+	.first-box .video-box,.first-box .con-schedule{width: 93%;margin-left: auto;margin-right: auto;}
 	.first-box .con-schedule{ padding-top: 0px;}
 	.first-box .con-reg-title{ border-bottom: none; padding-top: 17px; padding-bottom: 17px;background: #3b64c4; position: relative;}
 	.first-box .con-reg-title:after{ content: ''; width: 29px; height: 17px;background: url("../img/arrow_down.png") no-repeat; position: absolute; right: 21px; top: 31px;    visibility: visible;}
