--- a/css/index.css
+++ b/css/index.css
@@ -90,10 +90,10 @@
 .con-reg-link a:hover{color:#2b55bb;}
 .con-reg-des{line-height:24px;font-size:12px;color:#666;}
 .con-reg-time{line-height:30px;font-size:14px;color:#666;padding-top:5px;}
-.con-reg-btns a{width:86px;height:26px;line-height:26px;text-align:center;border:1px solid #83a1e9;color:#2b55bb;margin-right:10px;border-radius:20px;}
+.con-reg-btns a{width:86px;height:26px;line-height:26px;text-align:center;border:1px solid #83a1e9;color:#2b55bb;margin-right:10px;border-radius:20px;margin-top: 4px;margin-bottom: 4px;}
 .con-reg-btns a.cur{background:#3b64c4;color:#fff;border-color:#3b64c4;}
 
-.con-reg-other a{color:#6a6a6a;padding-left:36px;float:left;position:relative;line-height:30px;margin:0 10px;}
+.con-reg-other a{color:#6a6a6a;padding-left:36px;float:left;position:relative;line-height:30px;margin:4px 10px 4px 0px;}
 .con-reg-other a i{width:30px;height:30px;background: url("../img/icon1.png") no-repeat;position:absolute;top:0;left:0;}
 .con-reg-other a:hover{color:#2b55bb;}
 .con-calendar{padding-top:30px;}
@@ -157,7 +157,7 @@
 .con-schedule .con-reg-line,.con-schedule .con-reg-sub,.con-action .con-reg-line,.con-action .con-reg-sub{color:#999999;padding-top:2px;font-family:"Microsoft YaHei";}
 .con-light{padding:10px 20px 10px 15px;background: #fff045;margin-top:20px;}
 .con-light i{float:left;width:18px;height:20px;background: url("../img/light.png") no-repeat;}
-.con-light p{line-height:20px;color:#222222;float:left;width:92%;margin-left:4px; text-align: justify;}
+.con-light p{line-height:20px;color:#222222;width:92%;text-align: justify;padding-left: 22px;}
 .con-rate{margin:25px 0px 16px 30px;}
 .con-rate dl{border-left:1px solid #ced9f2;}
 .con-rate dd{width:278px;padding:20px 0 20px 20px;position:relative;}
@@ -272,6 +272,10 @@
 	.first-box .con-reg-tip{ background-image: url("../img/tip4.png");}
 	
 }
+@media (max-width: 581px) {
+	.con-result-list{margin-top: 20px;}
+}
+
 @media (min-width: 768px) and(max-width: 992px) {
 	.saishi-box{padding-left: 0px;padding-right: 0px;}
 }
@@ -323,3 +327,68 @@
 .con-slide-m .item a:nth-child(2){margin: 0 3px;}
 .con-slide-m .item a:last-child{margin-left:0px;}
 
+
+/*赛事报名 赛事安排 列表*/
+.saishi-list-wrap{/*padding: 0px 20px;*/}
+.saishi-list-wrap .row{margin: 0px;}
+.saishi-list-wrap .col-xs-12,.saishi-list-wrap .col-sm-9{padding: 0px;}
+/*.saishi-list{padding-top: 8px;}*/
+.saishi-list li{    margin-top: 20px;}
+/*.saishi-list li:last-child{padding-bottom: 0px;}*/
+
+.siashi-list-item{background-color: #f6f6f6; border-left: 4px solid #fff045;padding: 20px 10px;}
+.saishi-list li:hover .siashi-list-item{background: #eceef1;}
+
+.thumbnail-box{}
+.thumbnail-box .thumbnail{padding: 0px;margin-bottom:0px;border: none;border-radius: 0px;background-color:transparent;margin: 16px 13px 10px 13px; text-align: center;}
+.thumbnail-box .thumbnail-item{position: relative; height: 100%;display: inline-block;}
+.thumbnail-box .black-bg{width: 96px; height: 96px;background: #000000; position: absolute; left: -7px; top: -6px; z-index: 1;}
+.thumbnail-box .thumbnail-img{ position: relative;z-index: 4;}
+.thumbnail-box .bobao-ing{width: 32px; height: 100%;background: rgba(0,0,0,0.6); position: absolute; left: 0px; top: 0px; z-index: 5;}
+.thumbnail-box .bobao-ing span{ display: block; width: 16px; height: 16px;background: url("../img/status.png") no-repeat;margin: 12px auto 6px auto;}
+.thumbnail-box .bobao-ing p{ color: #fff;width: 16px;text-align: center;margin: 0 auto; line-height: 14px;}
+
+@media (min-width: 768px) {
+	.saishi-list-wrap .thumbnail-box{ width: 130px; height: 130px; min-width: 100px; height: 100px;}
+	.saishi-list-wrap .col-sm-10{width: 77%;}
+
+}
+
+
+.list-detail-box{min-height: 130px;padding-left: 17px;display: box; display: -webkit-box;display: -moz-box;-moz-box-align:center;
+	-webkit-box-align:center;
+	-o-box-align:center;
+	box-align:center;}
+.list-detail{-moz-box-flex:1;  -webkit-box-flex:1; box-flex:1;}
+.list-detail .title{font-size: 16px; color: #000000; line-height: 20px;}
+.list-detail .translate{font-size: 12px; color: #666666; line-height: 16px;padding: 10px 0 15px 0;}
+.list-detail .time{font-size: 14px; color: #666666; line-height: 18px;}
+
+.list-zc{padding-top: 7px;}
+.list-zc-item{ float: left;margin-right: 18px;}
+.list-zc-item i{ float: left; width: 30px; height: 30px;background-repeat: no-repeat;margin-right: 5px;}
+.list-zc-item i:nth-child(1){background-image: url("../img/icon1.png");}
+.list-zc-item i:nth-child(2){background-image: url("../img/icon2.png");}
+.list-zc-item span{ color: #6a6a6a; line-height: 30px;}
+
+.list-btn{display: block; width: 86px; height: 26px; line-height: 26px; border: 1px solid #83a1e9;border-radius: 18px; margin: 0 auto;color: #2b55bb;text-align: center;position: absolute;left: 50%;top: 50%;transform: translate(-50%,-50%);}
+.list-btn.active,.list-btn:hover{background: #3b64c4; color: #fff;}
+/*.list-btn-box{
+	display:-moz-box;
+	display:-webkit-box;
+	display:box;
+	-moz-box-orient:vertical;
+	-webkit-box-orient:vertical;
+	box-orient:vertical;
+	width: 100%;
+	min-height: 130px;
+	vertical-align: top;
+}
+.list-btn-item{
+	-moz-box-flex:1;
+	-webkit-box-flex:1;
+	box-flex:1;
+	position: relative;
+}*/
+.saishi-list-wrap .list-btn-box{margin-top: 8px;}
+.saishi-list-wrap .con-reg-btns{margin-right: 10px;}
