--- a/css/houtai.css
+++ b/css/houtai.css
@@ -1,90 +1,19 @@
-/*header start*/
-.g-header,.g-header .navbar-header{height:76px;}
-.g-header{background: #f6f6f6;width:100%;z-index:10;position: relative;}
-.g-header .container{padding:0;}
-.g-header .navbar {border:none;margin-bottom:0;background: none;}
-.g-header .navbar-collapse{padding:0 10px;z-index:20;}
-.g-header .navbar-nav{float:right;}
-.g-logo{width:208px;height:82px;padding:0;position:absolute;top:0;left:0;}
-.g-logo img{display:block;width:208px;height:82px;}
-.g-fun{width:36px;height:32px;background: url("../img/fun.png") no-repeat;background-size:cover;margin-top:22px;padding:0;}
-.g-header .navbar-nav li,.g-header .navbar-nav li a{float:left;height:76px;}
-.g-header .navbar-nav li{border-right:1px solid #eaeaea;text-align:center;}
-.g-header .navbar-nav li.g-nav-first{border-left:1px solid #eaeaea;}
-.g-header .navbar-nav li a{padding:0 30px;background: #f6f6f6;}
-.g-header .navbar-nav li em,.g-header .navbar-nav li span{display:block;}
-.g-header .navbar-nav li em{font-size:14px;color:#333;line-height:22px;padding-top:23px;}
-.g-header .navbar-nav li span{font-size:12px;color:#acacac;font-family:"Arial";line-height:16px;}
-.g-login em{padding-left:16px;position:relative;}
-.g-login em i{position:absolute;top:27px;left:0;width:12px;height:14px;overflow:hidden;background: url("../img/user.png") no-repeat;}
-.g-login-after .g-login-sub em{position:relative;padding-right:15px;}
-.g-login-after .g-login-sub em i{position:absolute;top:35px;right:0;width:12px;height:6px;overflow:hidden;background: url("../img/arrow-j.png") no-repeat;}
-.g-header .navbar-nav li.g-login-after em{padding-top:27px;}
-.g-header .navbar-nav .g-nav-li.active a{background: #3b64c4;height:83px;}
-.g-header .navbar-nav .g-nav-li.active{border-right:none;}
-.g-header .navbar-nav .g-nav-li.active em{color:#fff;}
-.g-header .navbar-nav .g-nav-li.active span{color:#8ca3da;}
-.g-arrow{width:20px;height:10px;background: url("../img/arrow.png") no-repeat;position:absolute;top:74px;right:23px;display:none;}
-.g-login-drop{width:164px;position:absolute;top:76px;right:0;background:#3b64c4;border:none;left:auto;}
-.g-login-drop dd{height:48px;background:#3b64c4;border-bottom:1px solid #5378ce;padding-left:10px;text-align:left;}
-.g-login-drop dd:last-child{border-bottom:none;}
-.g-header .navbar-nav li.g-login-after dd em{padding-top:5px;font-size:12px;color:#c3d0ee;line-height:20px;}
-.g-header .navbar-nav li.g-login-after dd span{color:#6287de;font-family:"Arial";font-size:12px;line-height:20px;}
-.g-header .navbar-nav li .g-login-drop a{width:100%;padding:0;background:#3b64c4;height:48px;}
-.g-header .g-login-after.open a, .g-header .g-login-after.open a:focus, .g-header .g-login-after.open a:hover{background:#3b64c4;}
-.g-header .g-login-after.open a.g-login-sub em{color:#c1cff2;}
-.g-header .g-login-after.open a.g-login-sub em i{background: url("../img/arrow-f.png") no-repeat;}
-.g-nav-blank{width:500px;}
-@media (min-width: 1068px) and (max-width: 1200px) {.g-header .navbar-nav li a{padding:0 20px;}}
-@media (min-width: 768px) and (max-width: 992px){.g-logo,.g-logo img{width:150px;height:60px;}.g-logo{margin-top:8px;} .g-nav-blank{width:300px;}}
-@media (min-width: 768px) and (max-width: 1068px) {.g-header .navbar-nav li a{padding:0 9px;} }
-@media (min-width: 1068px) and (max-width: 1168px) { .g-header .navbar-nav li a{padding:0 15px;}}
-@media (max-width: 768px){
-    .g-header .navbar-collapse{overflow-x:hidden;border-top:none;width:100%;position:relative;}
-    .g-header .navbar-toggle{border-color:transparent;}
-    .g-header .navbar-toggle:focus, .g-header .navbar-toggle:hover{background-color: transparent;}
-    .g-header .navbar-nav{margin-top:0;margin-bottom:0;float:none;}
-    .g-header .navbar-nav li,.g-header .navbar-nav li a{width:100%;}
-    .g-header .navbar-nav li{border-right:none;text-align:left;height:auto;}
-    .g-header .navbar-nav li.g-nav-li{border-bottom:1px solid #4772d4;}
-    .g-header .navbar-nav li a{padding:0;background: #3b64c4;padding-left:30px;height:62px;}
-    .g-header .navbar-nav li em,.g-header .navbar-nav li span{display:inline-block;vertical-align: top;}
-    .g-header .navbar-nav li em{font-size:16px;color:#c1cff2;line-height:22px;padding-top:0;padding-top:20px;}
-    .g-header .navbar-nav li span{font-size:10px;color:#6589dd;font-family:"\5FAE\8F6F\96C5\9ED1";line-height:22px;padding-left:10px;padding-top:22px;}
-    .g-header .g-login em{padding-left:0;}
-    .g-header .g-login em i{display:none;}
-    .g-header .navbar-nav .g-nav-li.active a{background: #3b64c4;height:62px;}
-    .g-header .navbar-nav .g-nav-li.active em{color:#c1cff2;}
-    .g-header .navbar-nav .g-nav-li.active span{color:#6589dd;}
-    .g-header .navbar-nav li a:hover,.g-header .navbar-nav li a:focus,.g-header .navbar-nav li a:active{background: #3b64c4;}
-    /*.g-header .g-arrow{display:block;}*/
-    .g-login-drop{width:100%;position:absolute;top:76px;right:auto;left:0;background:#4870cc;border:none;z-index:15;}
-    .g-header .navbar-nav li.g-login-after a.g-login-sub{height:62px;background:#3b64c4;}
-    .g-header .navbar-nav li.g-login-after em{padding-top:20px;}
-    .navbar-nav .open .dropdown-menu{top:auto;left:auto;right:auto;}
-    .g-login-drop dd{padding-left:40px;float:left;width:100%;}
-    .g-header .navbar-nav li.g-login-after dd em{padding-top:20px;font-size:14px;}
-    .g-login-drop dd,.g-header .navbar-nav li .g-login-drop a{background: #4870cc;}
-     .g-header .g-login-after.open a:focus, .g-header .g-login-after.open a:hover{background:#4870cc;}
-    .g-login-after .g-login-sub em i{top:30px;background: url("../img/arrow-f.png") no-repeat;}
-}
-/*header end*/
-/*banner slide start*/
-.g-ban-slide{position:relative;z-index:1;}
-.g-ban-pic a,.ban-slides-pic ul img{display:block;width:100%;height:auto;}
-.g-ban-pic li{position:relative;}
-.g-ban-pic li i{background:rgba(0,0,0,0.2);position:absolute;top:0;left:0;display:none;width:100%;height:100%;}
-.g-ban-filter{height:38px;width:100%;background: rgba(0,0,0,0.5);position:absolute;bottom:0;left:0;}
-.g-ban-btn ul{height:10px;position:absolute;bottom:15px;right:15px;z-index:5;}
-.g-ban-btn li{border:0 none;width:10px;height:10px;background:#4a4a4a;cursor:pointer;}
-.g-ban-btn li.active{background: #ffdf2d;}
-.g-ban-pic li.active i{display:block;}
-.g-ban-arrow{width:30px;height:35px;position:absolute;top:50%;margin-top:-18px;transition:left 0.2s ease-in;}
-.g-ban-arrow.left{left:20px;background: url("../img/arrow-left2.png") no-repeat;}
-.g-ban-arrow.right{right:20px;background: url("../img/arrow-right2.png") no-repeat;}
-/*banner slide end*/
 
-/* ¾ãÀÖ²¿¹ÚÃû start */
+
+*{box-sizing: content-box;-webkit-box-sizing: content-box;-moz-box-sizing: content-box;}
+.indexMain-wrap{background: url('../img/indexbg.jpg') center top;padding-bottom: 40px;}
+@media (min-width: 1230px) {
+    .container {
+        width: 1200px;
+    }
+}
+.container {
+    padding-right: 0px;
+    padding-left: 0px;
+    /* overflow: hidden; */
+}
+
+/* ï¿½ï¿½ï¿½Ö²ï¿½ï¿½ï¿½ï¿½ï¿½ start */
 .club-t-con{margin-top:40px;}
 .club-t-l{width:230px;background: #41485b;min-height:714px;}
 .club-t-r{width:970px;background: url("../img/club-bg.jpg") no-repeat;min-height:714px;position: relative;background-size:cover;}
@@ -95,7 +24,7 @@
 .club-t-list dd{height:60px;line-height:60px;font-size:14px;border-bottom:1px solid #41485b;}
 .club-t-list dd a{display:block;height:60px;color:#b2b5bc;padding-left:20px;background: #4c576a;}
 .club-t-list dd .club-t-icon,.club-t-list dd em{display:inline-block;vertical-align: middle;}
-.club-t-list dd .club-t-icon{width:18px;height:16px;overflow: hidden;padding-right:15px;}
+.club-t-list dd .club-t-icon{width:18px;height:16px;overflow: hidden;margin-right:15px;}
 .club-t-list dd.club-t-list1 .club-t-icon{background: url("../img/club-icon1.png") no-repeat;}
 .club-t-list dd.club-t-list2 .club-t-icon{background: url("../img/club-icon2.png") no-repeat;}
 .club-t-list dd.club-t-list3 .club-t-icon{background: url("../img/club-icon3.png") no-repeat;}
@@ -115,8 +44,8 @@
 .club-t-tip{color:#ff9333;line-height:32px;padding:10px 0;}
 .club-t-submit{display:block;width:100px;height:34px;line-height:34px;border:0 none;margin:10px auto 0;background:#3b64c4;border-radius:20px;font-size:14px;color:#fff;text-align: center;}
 .club-error{color:#f30;height:20px;line-height:20px;position:absolute;top:58px;left:72px;display:none;}
-/* ¾ãÀÖ²¿¹ÚÃû end */
-/*ÔË¶¯Ô±¹ÜÀí\ÁªÈü±¨Ãû¹ÜÀístart*/
+/* ï¿½ï¿½ï¿½Ö²ï¿½ï¿½ï¿½ï¿½ï¿½ end */
+/*ï¿½Ë¶ï¿½Ô±ï¿½ï¿½ï¿½ï¿½\ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½start*/
 .club-m-r{background: #fff;}
 .club-m-con{padding:15px 20px 20px;}
 .club-m-reg{padding:0 15px 0 40px;height:26px;line-height:26px;font-size:14px;color:#2b55bb;border-radius:20px;border:1px solid #83a1e9;background: url("../img/club-m-icon.png") no-repeat 18px 5px;}
@@ -137,8 +66,8 @@
 .club-m-page a ,.club-m-page .club-m-page-now{position:relative;  display:inline-block;  margin:0 3px; width:30px;height:30px;line-height:30px;  vertical-align:middle;   font-size:12px;text-align:center;border-radius:30px;}
 .club-m-page a {border:1px solid #eaeaea;  color:#333;  background:#fff;  }
 .club-m-page .club-m-page-now,.club-m-page a:hover{border:1px solid #fff045; background:#fff045; }
-/*ÔË¶¯Ô±¹ÜÀí\ÁªÈü±¨Ãû¹ÜÀíend*/
-/*¾ãÀÖ²¿×ÊÁÏ start*/
+/*ï¿½Ë¶ï¿½Ô±ï¿½ï¿½ï¿½ï¿½\ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½end*/
+/*ï¿½ï¿½ï¿½Ö²ï¿½ï¿½ï¿½ï¿½ï¿½ start*/
 .club-d-dels{width:397px;height:666px;border:1px solid rgba(0,0,0,0.2);background: #fcfcfc;margin:40px auto 46px;position: relative;}
 .club-d-dels .club-t-wave{width:397px;background: url("../img/club-wave.png") no-repeat;}
 .club-d-dels .club-t-items-txt i{position:absolute;color:#ff9333;font-size:14px;left:0;top:0;line-height:20px;top:12px;}
@@ -146,8 +75,8 @@
 .club-d-con .club-t-l{padding-bottom:40px;}
 .club-d-con .club-t-submit{margin-top:20px;}
 .club-d-con .club-t-items{padding-top:5px;}
-/*¾ãÀÖ²¿×ÊÁÏ end*/
-/*Ìí¼ÓÔË¶¯Ô±start*/
+/*ï¿½ï¿½ï¿½Ö²ï¿½ï¿½ï¿½ï¿½ï¿½ end*/
+/*ï¿½ï¿½ï¿½ï¿½Ë¶ï¿½Ô±start*/
 .club-a-sex{margin-right:40px;}
 .club-a-sex .check,.club-a-sex .checked{display:inline-block;width:18px; height:18px; cursor:pointer;  vertical-align:middle;  overflow:hidden;  background:url(../img/club-check.png) no-repeat;margin-right:10px;}
 .club-a-sex .checked{background:url(../img/club-checked.png) no-repeat;}
@@ -173,8 +102,8 @@
 .club-a-upload-dels{margin-left:20px;}
 .club-a-upload-add{display:block;width:86px;height:26px;line-height:26px;text-align:center;font-size:12px;color:#3b64c4;border:1px solid #3b64c4;border-radius:20px;}
 .club-a-r .club-error{left:84px;}
-/*Ìí¼ÓÔË¶¯Ô±end*/
-/*¹ØÓÚÎÒÃÇstart*/
+/*ï¿½ï¿½ï¿½ï¿½Ë¶ï¿½Ô±end*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½start*/
 .indexMain-wrap.about,.indexMain-wrap.back,.indexMain-wrap.reg-c,.indexMain-wrap.reg-b{padding:40px 0;}
 .indexMain-wrap.about .container{min-height:640px;}
 .indexMain-wrap.about .con-calendar,.indexMain-wrap.back .con-calendar,.indexMain-wrap.reg-c .con-calendar,.indexMain-wrap.reg-b .con-calendar{padding-top:0;}
@@ -190,8 +119,8 @@
 .about-para .col-sm-6{padding:0;}
 .about-pic{margin:10px 0 0 30px;}
 .about-pic img{width:100%;height:auto;}
-/*¹ØÓÚÎÒÃÇend*/
-/*ÈüÊÂ»Ø¹Ëstart*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½end*/
+/*ï¿½ï¿½ï¿½Â»Ø¹ï¿½start*/
 .indexMain-wrap.back .con-reg-text{font-size:16px;}
 .indexMain-wrap.back .col-xs-6,.indexMain-wrap.back .col-md-3,.indexMain-wrap.back .col-sm-6{padding:0;}
 @media (min-width: 992px) and (max-width: 1200px) { .indexMain-wrap.back .back-dels li{width:315px;}}
@@ -205,8 +134,8 @@
 .back-yellow{width:100%;height:4px;background: #fff045;position:absolute;bottom:0;left:0;display:none;}
 .back-dels li.active .back-yellow{display:block;}
 
-/*ÈüÊÂ»Ø¹Ëend*/
-/*È¡Ïû±¨Ãûstart*/
+/*ï¿½ï¿½ï¿½Â»Ø¹ï¿½end*/
+/*È¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½start*/
 .indexMain-wrap.reg-c .con-select-top,.indexMain-wrap.reg-b .con-select-top{margin-top:15px;}
 .indexMain-wrap.reg-c .club-t-r,.indexMain-wrap.reg-b .club-t-r{width:100%;min-height:455px;background: url("../img/club-bg2.jpg") no-repeat;background-size:cover;}
 .indexMain-wrap.reg-c .club-t-items-txt i,.indexMain-wrap.reg-b .club-t-items-txt i{position:absolute;color:#ff9333;font-size:14px;left:0;top:0;line-height:20px;top:12px;}
@@ -214,8 +143,8 @@
 .indexMain-wrap.reg-c .club-t-submit{margin-top:30px;}
 .indexMain-wrap.reg-c .club-error{left:82px;}
 video{vertical-align: top;}
-/*È¡Ïû±¨Ãûend*/
-/*²ÎÈü±¨Ãûstart*/
+/*È¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½end*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½start*/
 .indexMain-wrap.reg-b .club-t-dels{width:509px;height:973px;position:absolute;top:40px;margin-left:-254px;margin-top:0;}
 .indexMain-wrap.reg-b .club-t-r{height:1064px;background: url("../img/club-bg3.jpg") no-repeat;background-size:cover;}
 .indexMain-wrap.reg-b .club-t-items{padding-top:5px;}
@@ -236,4 +165,4 @@ video{vertical-align: top;}
 .j-b-items .club-error,.j-b-id .club-error{top:38px;}
 .club-items-list-other .club-error{top:108px;}
 .indexMain-wrap.reg-a .club-t-con,.indexMain-wrap.reg-m .club-t-con,.indexMain-wrap.reg-g .club-t-con,.indexMain-wrap.reg-d .club-t-con{min-width:1200px;}
-/*²ÎÈü±¨Ãûend*/
+/*ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½end*/
