--- a/css/saishi.css
+++ b/css/saishi.css
@@ -2,7 +2,10 @@
 *{box-sizing: content-box;-webkit-box-sizing: content-box;-moz-box-sizing: content-box;-ms-box-sizing: content-box;}
 .container{padding: 0px;}
 .row{ margin: 0px;}
-.col-sm-12{padding: 0px;}
+.col-xs-12,
+.col-sm-12,.col-sm-6,.col-sm-1,
+.col-md-6{padding: 0px;}
+
 
 @media (min-width: 1230px){
     .container{ width: 1200px;}
@@ -64,6 +67,10 @@
 .mingci{ width: 22px; height: 22px;text-align: center; line-height: 22px; color: #41485b;font-size: 16px;border-radius: 50%;background: #c2c9dc;margin: 0 auto;font-family: 'Arial';}
 .mingci.good{background-color: #41485b;color: #fff;}
 
+.load-more{font-size: 14px; color: #999999;line-height: 18px; cursor: pointer;}
+.load-more .rotate{display: inline-block; width: 22px; height: 18px; background: url("../img/rotate.png") no-repeat;vertical-align: middle;margin-right: 4px;}
+.table > tbody > .load-more > td{color: #999999;}
+
 /*分页*/
 .fenye-box{text-align: center;}
 .fenye-box .pagination{ vertical-align: top;}
@@ -74,4 +81,256 @@
 .person-detail{padding: 15px 20px 14px 20px; line-height: 18px;}
 .person-detail b{font-weight: normal;color: #41485b;}
 .person-detail span{color: #cdcdcd;padding:0 20px;}
+
+/*运动员查询*/
+.yundong-wrap{border-top:1px solid rgba(104,132,232,0.1);border-bottom:1px solid rgba(104,132,232,0.1);padding: 12px 20px 11px 20px;}
+.yundong-logo{padding: 2px 0;}
+.yundong-logo .logo{float: left; width: 32px; height: 32px; background: url("../img/yundong.png") no-repeat;margin-right: 11px;}
+.yundong-logo h3{float: left; color: #666666;font-size: 20px; line-height: 32px;}
+
+.yd-search-wrap{width:100%;display: box; display: -webkit-box;display: -moz-box;padding: 2px 0;}
+.yd-search-box{box-flex: 3;-webkit-box-flex: 3;-moz-box-flex: 3;padding-left: 130px;}
+
+.yd-search{width:100%;display: box; display: -webkit-box;display: -moz-box;}
+
+.search-text{/*float: left; */height: 30px; padding: 0 10px;border: 1px solid #adc2f4;box-flex: 3;-webkit-box-flex: 3;-moz-box-flex: 3;color: #bbbbbb;}
+.search-btn{ /* float: left;width: 80px; */display:block; min-width: 38px;height: 32px;line-height: 32px;background: #3b64c4;font-size: 14px; color: #cedbf9;text-align: center;box-flex: 1;-webkit-box-flex: 1;-moz-box-flex: 1;}
+
+.help-item{ float: left;box-flex: 1;-webkit-box-flex: 1;-moz-box-flex: 1;}
+.help-item i{ float: left; width: 17px; height: 16px;background: url("../img/help.png") no-repeat;margin: 8px 4px 0 24px;}
+.help-item p{ float: left; font-size: 14px; color: #41485b; line-height: 32px;}
+
+
+@media (max-width: 992px) {
+    .yd-search-box{ padding-left: 0px;}
+}
+@media (min-width: 992px) and (min-width: 1170px) {
+    .yd-search-box{ padding-left: 60px;}
+}
+
+
+/*赛事列表*/
+.saishi-list-wrap{padding: 0px 20px;}
+.saishi-list{padding-top: 8px;}
+.saishi-list li{padding: 10px 0px;}
+.saishi-list li:last-child{padding-bottom: 0px;}
+
+.siashi-list-item{background-color: #f6f6f6; border-left: 4px solid #fff045;padding: 10px;}
+.saishi-list li:hover .siashi-list-item{background: #eceef1;}
+
+.thumbnail-box{}
+.thumbnail-box .thumbnail{padding: 0px;margin-bottom:0px;border: none;border-radius: 0px;background-color:transparent;margin: 16px 13px 10px 13px; text-align: center;}
+.thumbnail-box .thumbnail-item{position: relative; height: 100%;display: inline-block;}
+.thumbnail-box .black-bg{width: 96px; height: 96px;background: #000000; position: absolute; left: -7px; top: -6px; z-index: 1;}
+.thumbnail-box .thumbnail-img{ position: relative;z-index: 4;}
+.thumbnail-box .bobao-ing{width: 32px; height: 100%;background: rgba(0,0,0,0.6); position: absolute; left: 0px; top: 0px; z-index: 5;}
+.thumbnail-box .bobao-ing span{ display: block; width: 16px; height: 16px;background: url("../img/status.png") no-repeat;margin: 12px auto 6px auto;}
+.thumbnail-box .bobao-ing p{ color: #fff;width: 16px;text-align: center;margin: 0 auto; line-height: 14px;}
+
+@media (min-width: 768px) {
+    .saishi-list-wrap .thumbnail-box{ width: 130px; height: 130px; min-width: 100px; height: 100px;}
+    .saishi-list-wrap .col-sm-9{width: 64%;}
+}
+
+
+.list-detail-box{min-height: 130px;padding-left: 17px;display: box; display: -webkit-box;display: -moz-box;-moz-box-align:center;
+    -webkit-box-align:center;
+    -o-box-align:center;
+    box-align:center;}
+.list-detail{-moz-box-flex:1;  -webkit-box-flex:1; box-flex:1;}
+.list-detail .title{font-size: 16px; color: #000000; line-height: 20px;}
+.list-detail .translate{font-size: 12px; color: #666666; line-height: 16px;padding: 10px 0 15px 0;}
+.list-detail .time{font-size: 14px; color: #666666; line-height: 18px;}
+
+.list-zc{padding-top: 7px;}
+.list-zc-item{ float: left;margin-right: 18px;}
+.list-zc-item i{ float: left; width: 30px; height: 30px;background-repeat: no-repeat;margin-right: 5px;}
+.list-zc-item i:nth-child(1){background-image: url("../img/icon1.png");}
+.list-zc-item i:nth-child(2){background-image: url("../img/icon2.png");}
+.list-zc-item span{ color: #6a6a6a; line-height: 30px;}
+
+.list-btn{display: block; width: 86px; height: 26px; line-height: 26px; border: 1px solid #83a1e9;border-radius: 18px; margin: 0 auto;color: #2b55bb;text-align: center;position: absolute;left: 50%;top: 50%;transform: translate(-50%,-50%);}
+.list-btn.active,.list-btn:hover{background: #3b64c4; color: #fff;}
+.list-btn-box{
+    display:-moz-box;
+    display:-webkit-box;
+    display:box;
+    -moz-box-orient:vertical;
+    -webkit-box-orient:vertical;
+    box-orient:vertical;
+    width: 100%;
+    min-height: 130px;
+    vertical-align: top;
+}
+.list-btn-item{
+    -moz-box-flex:1;
+    -webkit-box-flex:1;
+    box-flex:1;
+    position: relative;
+}
+
+
+
+/*赛事成绩*/
+.chengji-head-wrap{padding: 10px 20px;background: #41485b;}
+.chengji-title{font-size: 14px; color: #fff; line-height: 28px;}
+.chengji-btn{float: right;}
+.chengji-btn a{ float: left; width: 86px; height: 26px; line-height: 26px;background-color: #414e72; border: 1px solid #3b64c4;border-radius: 18px; color: #fff;text-align: center;margin-left: 10px;}
+
+
+@media (max-width: 768px) {
+    .list-btn-box{
+        -moz-box-orient:horizontal;
+        -webkit-box-orient:horizontal;
+        box-orient:horizontal;
+        min-height: 28px;
+        margin: 10px 0;
+    }
+
+    .chengji-btn{ float: left;}
+    .chengji-btn a{margin: 2px 10px 2px 0px;}
+}
+
+/*查看赛事成绩*/
+.checkgrade-wrap{ padding: 10px 10px 0px 20px; overflow: hidden;}
+.checkgrade-box{ padding-left: 12px;position: relative;}
+
+.checkgrade-left-line{width: 1px; height: 100%; position: absolute;left: 5px; top: 17px;
+    background: -webkit-linear-gradient(top, #ced9f2 , #fff);
+    background: -moz-linear-gradient(top, #ced9f2 , #fff);
+}
+
+.checkgrade-head{position: relative;}
+.checkgrade-head .line{width: 33%;min-width: 190px; height: 1px; position: absolute;left: -7px; top: 17px;z-index: 1;
+    background: -webkit-linear-gradient(left, #ced9f2 , #fff);
+    background: -moz-linear-gradient(left, #ced9f2 , #fff);
+}
+.checkgrade-head .dot{ width: 6px; height: 6px;border: 3px solid #3b64c4;background-color: #fff;border-radius: 50%; position: absolute;left: -12px; top: 11px;z-index: 3;}
+.checkgrade-head .title{ display: inline-block;font-size: 16px; color: #3b64c4; line-height: 34px;padding: 0 7px;background-color: #fff; position: relative;z-index: 2;margin-left: 6px;}
+.checkgrade-head .title span{font-size: 14px; color: #666666; }
+
+.checkgrade-dl{padding-bottom: 11px;}
+.checkgrade-dd{float: left; padding: 10px 12px 10px 13px;}
+.checkgrade-item{display: block; width: 166px; height: 38px; line-height: 38px; border: 1px solid #ced9f2;background-color: #f6f6f6; color: #3b64c4; text-align: center;white-space: nowrap;overflow: hidden; text-overflow: ellipsis;}
+
+
+/*直播*/
+.zhibo-head{background-color: rgba(32,70,158,0.7); padding: 10px 12px;}
+.zhibo-head .logo{float: left; width: 44px; height: 44px; background: url("../img/yundong_big.png") no-repeat;}
+.zhibo-head .zhibo-title{padding-left: 56px; color: #8ea9e9;}
+.zhibo-head .zhibo-title h3{ font-size: 16px; line-height: 22px;padding: 3px 0;}
+.zhibo-head .zhibo-title p{ font-size: 12px; line-height: 16px;}
+
+.video-wrap{padding: 18px 10px 11px 10px; background: url("../img/zhibo_bg.jpg") no-repeat;background-size: 100% 100%;}
+.video-box{
+    width: 100%;
+    display:-moz-box;
+    display:-webkit-box;
+    display:box;
+}
+.video-flex{
+    box-flex: 1;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+}
+.video-flex .video{ display: block;width: 100%;vertical-align: top;}
+
+.chat-wrap{width: 350px;position: relative;background: rgba(3,35,108,0.6);}
+.chat-box{padding: 13px 20px 16px 20px;overflow: hidden;}
+.chat-list{ width: 100%;/* height: 448px;*/ height: 603px;overflow: auto;}
+
+.chat-title{}
+.chat-title .name{ float: left;line-height: 22px; color: #fff045;padding-right: 18px;}
+.chat-title .time{ float: left;line-height: 22px; color: #fff045;}
+
+.chat-content{margin: 5px 0 15px 5px;padding: 5px 12px 6px 12px; line-height: 20px; color: #333333;background-color: #e1e8f8;border-radius: 5px; position: relative;}
+.chat-content:before{content: '';width: 8px; height: 16px;background: url("../img/sanjiao.png") no-repeat;position: absolute; left: -4px; top: -5px;}
+
+.chat-send-box{ width: 100%; height: 60px; position: absolute; left: 0px; bottom: 0px;}
+.chat-send-con{ margin: 0 10px 0 20px;}
+.chat-send-text{ float: left;padding: 5px 10px; width: 221px; min-height: 26px; line-height: 26px;border: 2px solid #fff045;background-color: transparent;}
+.chat-send-btn{ float: left; width: 75px; height: 40px;background-color: #fff045; text-align: center; line-height: 40px; color: #2b55bb; font-size: 14px;}
+
+
+@media (max-width: 1200px) {
+    .chat-list{ height: 411px;}
+}
+
+.chat-tip-wrap{ width: 100%; position: absolute; left: 0; bottom: 82px;background: rgba(23,54,128,0.7);}
+.chat-tip-icon{float: left; width: 17px; height: 16px;background: url("../img/yellow_time.png") no-repeat;margin: 11px 0 0 20px;}
+.chat-tip-content{padding: 10px 46px 7px 46px; line-height: 20px; color: #fff045;}
+.chat-tip-wrap .close{width: 13px; height: 13px;background: url("../img/close.png") no-repeat; position: absolute; right: 21px; top: 13px;opacity: 1;}
+
+.zhibo-main-wrap{background-color: #fff;padding: 31px 0 40px 0;}
+.zhibo-main-left{padding: 0 40px 0 20px;}
+.zhibo-main-right{}
+
+.zhibo-select-box{padding: 5px 0 15px 0;}
+.zhibo-sel-item{ float: left; width: 146px; height: 38px; line-height: 38px; border: 1px solid #ced9f2;background-color: #f6f6f6; color: #3b64c4; text-align: center;margin: 5px 7px 5px 0px;}
+.zhibo-sel-item:last-child{margin-right: 0px;}
+.zhibo-sel-item:hover,
+.zhibo-sel-item.active{background-color: #3b64c4; border-color: #3b64c4; color: #fff;}
+
+@media (min-width: 1230px) {
+    .zhibo-main-l-box{width: 830px;}
+    .zhibo-main-r-box{width: 370px;}
+}
+
+
+@media (max-width: 992px) {
+    .zhibo-main-left{padding-right: 0px;padding-left: 0px;}
+}
+
+/*index.css*/
+.con-schedule,.con-action{padding-top:20px;background:#f6f6f6;}
+.con-schedule .con-reg-title,.con-action .con-reg-title{height:36px;line-height:36px;padding-left:20px;}
+.con-schedule .con-reg-tip,.con-action .con-reg-tip{background: url("../img/tip3.png") no-repeat;margin-top:10px;height:16px;}
+.con-schedule .con-reg-title,.con-action .con-reg-title{border-bottom:1px solid #d6dae3;}
+.con-schedule .con-reg-text,.con-action .con-reg-text{color:#3b64c4;font-size:16px;}
+.con-schedule .con-reg-line,.con-schedule .con-reg-sub,.con-action .con-reg-line,.con-action .con-reg-sub{color:#999999;padding-top:2px;font-family:"Microsoft YaHei";}
+
+.con-light{padding:10px 20px 10px 15px;background: #fff045;margin-top:20px;}
+.con-light i{float:left;width:18px;height:20px;background: url("../img/light.png") no-repeat;}
+.con-light p{line-height:20px;color:#222222;float:left;width:92%;margin-left:4px; text-align: justify;}
+.con-rate{margin:25px 0px 16px 30px;}
+.con-rate dl{border-left:1px solid #ced9f2;}
+.con-rate dd{width:278px;padding:20px 0 20px 20px;position:relative;}
+.con-rate-top{width:296px;height:1px;overflow:hidden;position:absolute;top:0;left:2px;background: url("../img/line.png") no-repeat;}
+.con-rate-circle{width:12px;height:12px;overflow:hidden;position:absolute;top:-6px;left:-6px;background: url("../img/circle.png") no-repeat;}
+.con-rate-time{font-size:14px;color:#3b64c4;line-height:24px;position:absolute;left:20px;top:-12px;}
+.con-rate-list{padding:5px 0 0 4px;}
+.con-rate-list li{line-height:24px;color:#333;font-size:12px;}
+.con-rate-list li span{color:#6a6a6a;padding-right:28px;}
+/*index.css*/
+
+.zhibo-main-wrap .con-rate{margin-bottom: 0px;}
+.ewm-wrap{background-color: #d8e0f3;padding: 27px 10px 29px 18px;}
+.ewm-wrap .thumbnail{background-color: transparent;margin-bottom: 0px;padding: 0px;}
+
+
+@media (max-width: 1200px) {
+    .zhibo-main-left{padding-right: 20px;}
+}
+
+
+/*关于我们*/
+.indexMain-wrap.about,.indexMain-wrap.back,.indexMain-wrap.reg-c,.indexMain-wrap.reg-b{padding:40px 0;}
+.indexMain-wrap.about .container{min-height:640px;}
+.indexMain-wrap.about .con-calendar,.indexMain-wrap.back .con-calendar,.indexMain-wrap.reg-c .con-calendar,.indexMain-wrap.reg-b .con-calendar{padding-top:0;}
+.indexMain-wrap.about .con-reg-title,.indexMain-wrap.back .con-reg-title,.indexMain-wrap.reg-c .con-reg-title,.indexMain-wrap.reg-b .con-reg-title{height:60px;line-height:60px;padding-left:20px;}
+.indexMain-wrap.about .con-reg-tip,.indexMain-wrap.back .con-reg-tip,.indexMain-wrap.reg-c .con-reg-tip,.indexMain-wrap.reg-b .con-reg-tip{margin-top:21px;}
+.indexMain-wrap.about .con-reg-line,.indexMain-wrap.back .con-reg-line,.indexMain-wrap.reg-c .con-reg-line,.indexMain-wrap.reg-b .con-reg-line{padding-top:16px;}
+.indexMain-wrap.about .con-reg-sub,.indexMain-wrap.back .con-reg-sub,.indexMain-wrap.reg-c .con-reg-sub,.indexMain-wrap.reg-b .con-reg-sub{padding-top:18px;}
+.about-para{padding:35px 40px 0;}
+.about-text p{line-height:28px;font-size:16px;color:#666;padding-top:28px;text-indent:2em;}
+.about-note{padding-top:56px;}
+.about-note p{line-height:28px;font-size:16px;color:#666;text-align:right;}
+.about-note p.about-date{line-height:30px;font-size:12px;color:#999;}
+.about-para .col-sm-6{padding:0;}
+.about-pic{margin:10px 0 0 30px;}
+.about-pic img{width:100%;height:auto;}
+
+
+
+
 
