--- a/css/global.css
+++ b/css/global.css
@@ -115,7 +115,7 @@ a:hover{text-decoration: none;}
 
 /*尾部*/
 .footer{/*height:80px;*/width:100%;background: #1c1c1c;width:100%;line-height:20px; padding: 30px 0px;}
-.footer p{text-align:center;color:#999999;}
+.footer p{text-align:center;color:#999999; padding: 0 10px;}
 .footer p span{padding:0 10px;}
 
 
