调整saishi 公用头部

--- a/css/saishi.css
+++ b/css/saishi.css
@@ -17,7 +17,7 @@
 .ssbm-title{ /*height: 30px;*/padding: 14px 20px 15px 20px; border-top: 1px solid rgba(104,132,232,0.1); border-bottom: 1px solid #d6dae3;}
 .ssbm-title:after{ content: '';display: block;clear: both;}
 .ssbm-title .line{ float: left; width: 3px; height: 20px; background: url("../img/tip2.png") no-repeat; margin: 5px 10px 0 0;}
-.ssbm-title .head{ color:#3b64c4;font-size: 20px; line-height: 30px;}
+.ssbm-title .head{ float: left; color:#3b64c4;font-size: 20px; line-height: 30px; min-width: 60px;}
 .ssbm-title .english{ float: left; color: #999999;font-size: 12px; line-height: 20px;margin-top: 10px;margin-right: 2px;}
 .ssbm-title .english span{padding: 0 2px 0 6px;}
 
@@ -95,9 +95,11 @@
 .yd-search{width:100%;display: box; display: -webkit-box;display: -moz-box;}
 
 .search-text{/*float: left; */height: 30px; padding: 0 10px;border: 1px solid #adc2f4;box-flex: 3;-webkit-box-flex: 3;-moz-box-flex: 3;color: #bbbbbb;}
-.search-btn{ /* float: left;width: 80px; */display:block; min-width: 38px;height: 32px;line-height: 32px;background: #3b64c4;font-size: 14px; color: #cedbf9;text-align: center;box-flex: 1;-webkit-box-flex: 1;-moz-box-flex: 1;}
+.search-text input{ display: block; width: 100%; height: 100%; border: none;}
+.search-btn{ /* float: left;width: 80px; */display:block; min-width: 38px;height: 32px;line-height: 32px;background: #3b64c4;font-size: 14px;text-align: center;box-flex: 1;-webkit-box-flex: 1;-moz-box-flex: 1;}
+.search-btn a{ display: block;width: 100%; height: 100%; color: #cedbf9;}
 
-.help-item{ float: left;box-flex: 1;-webkit-box-flex: 1;-moz-box-flex: 1;}
+.help-item{ box-flex: 1;-webkit-box-flex: 1;-moz-box-flex: 1;}
 .help-item i{ float: left; width: 17px; height: 16px;background: url("../img/help.png") no-repeat;margin: 8px 4px 0 24px;}
 .help-item p{ float: left; font-size: 14px; color: #41485b; line-height: 32px;}
 
