--- a/css/global.css
+++ b/css/global.css
@@ -2,7 +2,7 @@
 
 /*reset start*/
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,blockquote,th,td,button{margin:0;padding:0}
-body{font:12px/1.5 \5B8B\4F53;}
+body{font:12px/1.5 "\5FAE\8F6F\96C5\9ED1" "\5B8B\4F53";}
 table{border-collapse:collapse;border-spacing:0}
 button,input,textarea,fieldset{padding:0;*overflow:visible}
 input,textarea{outline:0;resize:none}
