--- a/css/index.css
+++ b/css/index.css
@@ -300,16 +300,10 @@
 	.second-box .con-reg-more{ width: 17px; height: 29px; margin: 7px 3px 0 0;background: url("../img/arrow3.png") no-repeat;font-size: 0px;background-size: 100% 100%; overflow: hidden;}
 }
 
-/*@media(max-width:582px) {
-	.con-reg-title{ margin-bottom: 20px;}
-}*/
+
 #con-right1,#con-right2{transition:ease 0.2s;-webkit-transition:ease 0.2s;-moz-transition:ease 0.2s;-ms-transition:ease 0.2s;}
 .con-reg-title:after{transition:transform ease 0.3s;-webkit-transition:-webkit-transform ease 0.3s;-moz-transition:-webkit-transform ease 0.3s;-ms-transition:-webkit-transform ease 0.3s;}
 .con-reg-title.collapsed:after {transform: rotate(-180deg);-moz-transform: rotate(-180deg);-ms-transform: rotate(-180deg);-webkit-transform: rotate(-180deg);}
-
-
-
-
 
 
 
@@ -318,27 +312,47 @@
     display: -webkit-box!important;
 }
 
-.indexMain-wrap .carousel-inner>.active,
-.indexMain-wrap .carousel-inner>.next,
-.indexMain-wrap .carousel-inner>.prev{
-	display: -webkit-box!important;
-	display: -moz-box!important;
-	display: -ms-box!important;
-	display: -o-box!important;
-	display: box!important;
-
+.indexMain-wrap .carousel-inner .item{
+	width: 100%;
 }
-.indexMain-wrap .carousel-inner .item{width: 100%;}
 
-.con-slide .item a{display: block;-webkit-box-flex:1;-moz-box-flex:1;-ms-box-flex:1;box-flex:1;position: relative;}
-.con-slide .item a:after{content:'';position: absolute;left: 0px;top: 0px;width: 100%;height: 100%;background-color: rgba(0,0,0,0.3);}
-.con-slide .item a:hover:after{display: none;}
-.con-slide .item a:nth-child(2){margin: 0 4px;}
-.con-slide .item a:last-child{margin-left:4px;}
-.con-slide .item img{display: block;width: 100%;height: 100%;}
+.indexMain-wrap .carousel-inner .item-box{
+	width: 100%;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-pack: justify;
+	-webkit-justify-content: space-between;
+	-ms-flex-pack:justify ;
+	justify-content: space-between;
+}
 
-.con-slide-m .item a:nth-child(2){margin: 0 3px;}
-.con-slide-m .item a:last-child{margin-left:0px;}
+.con-slide .item a{
+	width:24.6%;
+	display: block;
+	background-color: skyblue;
+	position: relative;
+}
+.con-slide-m .item a{
+	width: 32.7%;
+}
+.con-slide .item a:after{
+	content: '';
+	position: absolute;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0,0,0,0.4);
+}
+.con-slide .item a img{
+	display: block;
+	width: 100%;
+}
+.container a:hover:after{
+	display: none;
+}
 
 
 /*赛事报名 赛事安排 列表*/
